<resources>
    <string name="app_name">BazaDanych</string>
    <string name="danepracownika">Dane pracownika</string>
    <string name="stanowisko">Stanowisko</string>
    <string name="password">Generowanie hasła</string>
    <string name="miw">Małe i wielkie litery</string>
    <string name="cyf">Cyfry</string>
    <string name="zs">Znaki specjalne</string>
    <string name="gh">Generuj hasło</string>
    <string name="acc">Zatwierdź</string>
    <string name="imie">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="ile_znak_w">Ile znaków?</string>
    <string-array name="stanowisko">
        <item>Kierownik</item>
        <item>Starszy programista</item>
        <item>Młodszy programista</item>
        <item>Tester</item>
    </string-array>
</resources>